<resources>
    <string name="action_add_tag">➕ Add new label</string>
    <string name="action_clear_all">🗑️ [Danger] Clear all current data</string>
    <string name="action_copy_root">📄 Copy current level data (JSON)</string>
    <string name="action_paste_root">📝 Paste/import data (overwrite)</string>
    <string name="action_paste_tag">📋 Paste sub tags</string>
    <string name="action_switch_day">Switch to: ☀️ Day Mode</string>
    <string name="action_switch_night">Switch to: 🌙 Night Mode</string>
    <string name="action_toggle_lang">Switch to English</string>
    <string name="action_toggle_night">Switch day/night</string>
    <string name="app_name">NBT Editor</string>
    <string name="btn_about">about</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_check_perm">Check permissions</string>
    <string name="btn_clean_cache">clear cache</string>
    <string name="btn_clear_all">🧹 Clear with one click</string>
    <string name="btn_clear_filter">Clear filter</string>
    <string name="btn_close">closure</string>
    <string name="btn_confirm">Sure</string>
    <string name="btn_confirm_clear">OK to clear</string>
    <string name="btn_copy_error">Copy error</string>
    <string name="btn_cover">cover</string>
    <string name="btn_create">create</string>
    <string name="btn_create_and_open">Create and open</string>
    <string name="btn_delete">delete</string>
    <string name="btn_delete_all">Delete all</string>
    <string name="btn_edit_player">👤 Edit player</string>
    <string name="btn_exit_fullscreen">⬅ Exit full screen</string>
    <string name="btn_full_export">Full export</string>
    <string name="btn_fullscreen">⛶ Full screen editing</string>
    <string name="btn_load">📂 Load archive</string>
    <string name="btn_more_actions">More actions</string>
    <string name="btn_reparse">⟳ Re-parse</string>
    <string name="btn_replace">replace</string>
    <string name="btn_restore">🕒 Restore backup</string>
    <string name="btn_save">💾 Save changes</string>
    <string name="btn_save_clip">save clip</string>
    <string name="btn_save_short">keep</string>
    <string name="btn_switch_path">switch path</string>
    <string name="btn_try_to_fix">try to fix</string>
    <string name="btn_understood">knew</string>
    <string name="btn_view_and_edit_clips">View/edit clips</string>
    <string name="dialog_about_content">NBT Editor (AIDE+ version)\nCurrent status: Development Preview</string>
    <string name="dialog_about_title">About and Settings</string>
    <string name="dialog_backup_title">Restore backup (long press to manage)</string>
    <string name="dialog_clear_msg">Are you sure you want to delete [all NBT data] under the current list?\n\nThis action is irreversible!</string>
    <string name="dialog_custom_path_title">Custom path</string>
    <string name="dialog_danger_title">⚠️ High energy warning</string>
    <string name="dialog_path_title">Select path</string>
    <string name="dialog_select_archive_title">Select archive (%d)</string>
    <string name="dialog_select_path_title">Select path</string>
    <string name="err_array_format">Format error: Please enter array format [x, x]</string>
    <string name="err_array_parse_fail">Array parsing failed, please check the format (comma separated)</string>
    <string name="err_display_data">Data display error:</string>
    <string name="err_format">Format error:</string>
    <string name="err_internal_player_path">Internal error: Player data path not logged</string>
    <string name="err_json_parse">JSON parsing failed, please check clipboard contents</string>
    <string name="err_load_failed">Read failed:</string>
    <string name="err_no_saves">No valid Minecraft save found at current path</string>
    <string name="err_no_saves_detail">No valid Minecraft save found in the current path\n(Must contain both level.dat and db folders)</string>
    <string name="err_read_file_not_generated">Read failed, file not generated</string>
    <string name="err_restore_failed_prefix">Recovery failed:</string>
    <string name="err_save_failed">Save failed:</string>
    <string name="err_source_empty">The source file is empty or has insufficient permissions</string>
    <string name="err_work_dir_missing">Working directory does not exist:</string>
    <string name="err_work_file_missing">The working file cannot be found, please [load archive] first</string>
    <string name="err_work_lost">The working directory has been lost, please reload!</string>
    <string name="err_write_failed">Write failed</string>
    <string name="hint_height_row">high (row)</string>
    <string name="hint_input_name">Enter tag name</string>
    <string name="hint_new_tag_name">New label name</string>
    <string name="hint_select_world">Click here to select/load archive...</string>
    <string name="hint_width_col">Width (column)</string>
    <string name="key_boolean_logic_closure">0 (Off / False)</string>
    <string name="key_boolean_logic_turn_on">1 (On/True)</string>
    <string name="key_coordinate">coordinate</string>
    <string name="key_difficulty_difficulty">3: Difficult</string>
    <string name="key_difficulty_ordinary">2: Normal</string>
    <string name="key_difficulty_peace">0: Peace</string>
    <string name="key_difficulty_simple">1: Simple</string>
    <string name="key_dimension_end">2: The End</string>
    <string name="key_dimension_main_world">0: Overworld</string>
    <string name="key_dimension_nether">1: Nether</string>
    <string name="key_game_mode_adventure">2: Adventure</string>
    <string name="key_game_mode_create">1: Create</string>
    <string name="key_game_mode_default">5: Default</string>
    <string name="key_game_mode_survive">0: Survive</string>
    <string name="key_game_mode_watch">3: spectate</string>
    <string name="key_game_time">game time</string>
    <string name="key_thunderstorm_rainfall_mtimes">%1$d seconds (%2$.1f minutes)</string>
    <string name="key_time_tick_calculation">%.1f days</string>
    <string name="key_world_generator_type_end">4: The End?</string>
    <string name="key_world_generator_type_flat">2: Flat</string>
    <string name="key_world_generator_type_limited">0: Limited</string>
    <string name="key_world_generator_type_nether">3: Nether?</string>
    <string name="key_world_generator_type_unknown">(unknown)</string>
    <string name="key_world_generator_type_unlimited">1: Infinite</string>
    <string name="key_world_generator_type_void">5: Void</string>
    <string name="label_editor">JSON data editing:</string>
    <string name="label_error_details">Detailed error message:</string>
    <string name="label_level_data">world data</string>
    <string name="label_player_data">Player data</string>
    <string name="mag_village_data">Village data</string>
    <string name="menu_add_child">Add child</string>
    <string name="menu_copy">copy</string>
    <string name="menu_del_backup">Delete backup</string>
    <string name="menu_delete">delete</string>
    <string name="menu_paste">Paste</string>
    <string name="menu_rename">Rename</string>
    <string name="menu_root_title">Root node operation</string>
    <string name="mode_raw">Raw data (Key + Value)</string>
    <string name="mode_raw_trans">Original text + translation (Key + translation)</string>
    <string name="mode_simple">Minimalist mode (only translation + parsing)</string>
    <string name="mode_smart">Smart annotation (Key + translation + parsing)</string>
    <string name="msg_about_content_full"><![CDATA[NBT Editor (AIDE+ version)<br>Current status: Continuously updated<br><br>Feedback questions/Submit new features? :<br><a href=https://github.com/yinghuajimew/yhjmew.minecraft.nbteditor>Click to visit the GitHub warehouse to submit Issues</a><br>QQ communication group: <a href=https://qm.qq.com/cgi-bin/qm/qr?_wv=1027&group_code=1077349003>Click to join the NBT editor exchange</a><br>Thank you! ! <br><a href=https://space.bilibili.com/628906424>Yejdhi</a> and <a href=https://github.com/LiteLDev>LeviMC members</a><br>Thanks to them, we have the current ideas and better modification methods]]>.</string>
    <string name="msg_already_packed">🎉 Packed!</string>
    <string name="msg_analyzing_backpack">Analyzing backpack...</string>
    <string name="msg_archive_damaged">Key files are missing from the path:\nlevel.dat: %1$s\ndb folder: %2$s</string>
    <string name="msg_are_deleting">Deleting...</string>
    <string name="msg_are_you_sure_you_want_to_delete_the_selected">Are you sure you want to delete the selected</string>
    <string name="msg_backpack_is_full_requires_at_least_1_open_space">Backpack is full! Requires at least 1 open space</string>
    <string name="msg_cleaning_up">Cleaning up...</string>
    <string name="msg_clear_all_cache">Are you sure you want to delete all cached files?</string>
    <string name="msg_comma_separated_format_click_save_after_modification">Please keep the comma separated format and click Save after modification</string>
    <string name="msg_confirm_clear_cache_short">Are you sure you want to delete all caches?</string>
    <string name="msg_confirm_deletion">Confirm deletion</string>
    <string name="msg_confirm_replace">Confirm replacement?</string>
    <string name="msg_copy_process_interrupted">Copy process interrupted</string>
    <string name="msg_corrupt_or_missing_leveldb_data_file_detected">Corrupt or missing LevelDB data file detected (commonly caused by a game crash or incomplete file copy)</string>
    <string name="msg_create_a_giant_jigsaw_puzzle">🧩Create giant puzzles (automatically imported into backpack)</string>
    <string name="msg_create_a_new_empty_data">] data\nCreate a new empty data?</string>
    <string name="msg_create_new_blank">➕ Create new blank</string>
    <string name="msg_custom_path">Please enter the archive directory (or archive parent directory)</string>
    <string name="msg_data_is_empty">Data is empty</string>
    <string name="msg_data_is_empty_colon">Data is empty:</string>
    <string name="msg_database_is_not_open">Database is not open</string>
    <string name="msg_database_shutdown">Database shutdown</string>
    <string name="msg_delete_all_data_in_the_list">🗑️ [DANGER] Delete all data in the list</string>
    <string name="msg_delete_confirm">Delete: %s ?</string>
    <string name="msg_delete_existing_ones_in_the_list">Are you sure you want to delete the existing ones in the list?</string>
    <string name="msg_deleting">Deleting</string>
    <string name="msg_dn_is_not_open">DB is not open</string>
    <string name="msg_enchant">Enchantment:</string>
    <string name="msg_failed_to_create_staging_directory">Failed to create staging directory (Unknown Error):</string>
    <string name="msg_fatal_conflict">A \'LOCK\' file exists in this archive directory\n\nPossible reasons:\n1 The archive has been modified by Blocktopograph and the NBT editor cannot load it\n2 Minecraft is running (please close the game completely)\nForced loading will cause bad files!\nYou can go to the db folder of the archive and delete the LOCK file yourself\n\nDetailed error:</string>
    <string name="msg_for_example_map">For example: map_123</string>
    <string name="msg_for_example_player">For example: player_uuid</string>
    <string name="msg_for_example_village">For example: VILLAGE_Overworld_xxx</string>
    <string name="msg_full_coverage">Make sure you want to use the contents of the clipboard [complete coverage]</string>
    <string name="msg_global_system_data">global system data (</string>
    <string name="msg_global_system_data_list_autonoous_entity">Autonomous Entity (Tick)</string>
    <string name="msg_global_system_data_list_biological_events">Biological events (Events)</string>
    <string name="btn_switch_day_and_night">Switch day and night</string>
    <string name="box_enable_multi_thread_acceleration">🚀 Enable multi-thread acceleration</string>
</resources>